# groceries-etl

./: .gitignore  README.md  docker-compose.yml  env.example  groceries  pyproject.toml  requirements.txt  setup.py
db/: init-db.sql  schema.sql
docs/: commands.md
scripts/: __init__.py  consolidate_stores.py  update_store_ids.py
scripts/processing/: __init__.py  base_scraper.py  load_json_to_db.py  scrape_grocery_deals.py  scrape_hmart.py  scrape_stew_leonards.py
src/groceries/: __init__.py  __main__.py  config.py
src/groceries/cli/: __init__.py  __main__.py  commands.py
src/groceries/database/: __init__.py  connection.py
src/groceries/models/: __init__.py  grocery.py
src/groceries/services/: __init__.py  category_service.py  grocery_service.py  store_service.py
src/groceries/utils/: __init__.py  json_processor.py  uuid_utils.py
tests/: __init__.py
tests/unit/: test_json_processor.py  test_models.py  test_uuid_utils.py
